--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "devDependencies": {
     "@types/bun": "latest"
   },
+  "scripts": {
+    "start": "bun run index.ts"
+  },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "grammy": "^1.38.1"
   }
 }
