--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "grammy": "^1.38.1"
+    "@prisma/client": "^6.15.0",
+    "grammy": "^1.38.1",
+    "prisma": "^6.15.0"
   }
 }
