Bot saves messages and use context for AI requests

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "grammy": "^1.38.1",
+    "openai": "^5.16.0",
     "prisma": "^6.15.0"
   }
 }
